--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_middle">
       <item>
        <widget class="QTextBrowser" name="textBrowser"/>
       </item>
@@ -50,6 +50,7 @@
     <property name="title">
      <string>Settings</string>
     </property>
+    <addaction name="actionConstituent_Properties"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -248,6 +249,11 @@
   <action name="actionTestGraphs">
    <property name="text">
     <string>TestGraphs</string>
+   </property>
+  </action>
+  <action name="actionConstituent_Properties">
+   <property name="text">
+    <string>Constituent Properties</string>
    </property>
   </action>
  </widget>
