--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,6 +48,7 @@
     <addaction name="actionTestDialog"/>
     <addaction name="actionTestLikelihoods"/>
     <addaction name="actionTestProgressGraph"/>
+    <addaction name="actionTestLevenberg_Marquardt"/>
    </widget>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
@@ -272,6 +273,11 @@
   <action name="actionTestProgressGraph">
    <property name="text">
     <string>TestProgressGraph</string>
+   </property>
+  </action>
+  <action name="actionTestLevenberg_Marquardt">
+   <property name="text">
+    <string>TestLevenberg-Marquardt</string>
    </property>
   </action>
  </widget>
