--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,6 +60,7 @@
     <property name="title">
      <string>Help</string>
     </property>
+    <addaction name="actionAbout"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuPlot"/>
@@ -278,6 +279,11 @@
   <action name="actionTestLevenberg_Marquardt">
    <property name="text">
     <string>TestLevenberg-Marquardt</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
