--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,6 +38,8 @@
      <string>File</string>
     </property>
     <addaction name="actionImport_Elemental_Profile_from_Excel"/>
+    <addaction name="actionSave_Project"/>
+    <addaction name="actionOpen_Project"/>
    </widget>
    <widget class="QMenu" name="menuPlot">
     <property name="title">
@@ -287,6 +289,16 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionSave_Project">
+   <property name="text">
+    <string>Save Project</string>
+   </property>
+  </action>
+  <action name="actionOpen_Project">
+   <property name="text">
+    <string>Open Project</string>
    </property>
   </action>
  </widget>
