--- a/generalchart.ui
+++ b/generalchart.ui
@@ -15,6 +15,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout"/>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout"/>
    </item>
   </layout>
