A whole lot of work

--- a/resulttableviewer.ui
+++ b/resulttableviewer.ui
@@ -13,7 +13,15 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout"/>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QPushButton" name="ExporttoCSV">
+     <property name="text">
+      <string>Export to CSV</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
