--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,6 +39,7 @@
     </property>
     <addaction name="actionImport_Elemental_Profile_from_Excel"/>
     <addaction name="actionSave_Project"/>
+    <addaction name="actionSave_As"/>
     <addaction name="actionOpen_Project"/>
    </widget>
    <widget class="QMenu" name="menuSettings">
@@ -271,6 +272,9 @@
    <property name="text">
     <string>Save Project</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
   </action>
   <action name="actionOpen_Project">
    <property name="text">
@@ -285,6 +289,11 @@
   <action name="actionOrganic_Matter_Size_correction">
    <property name="text">
     <string>Organic Matter/Size correction</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save Project As</string>
    </property>
   </action>
  </widget>
