--- a/formelementinformation.ui
+++ b/formelementinformation.ui
@@ -17,6 +17,13 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
+      <widget class="QCheckBox" name="Include_Exclude_All_checkBox">
+       <property name="text">
+        <string>CheckBox</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QTableView" name="tableView"/>
      </item>
     </layout>
